# poe-groups

./: .gitignore  .scalafmt.conf  README.md
backend/: README.md  WORKSPACE  build_deps.bzl  scala_version.bzl  third_party.bzl
backend/root/: BUILD.bazel
backend/root/src/main/scala/poegroups/: BUILD.bazel  Main.scala
backend/toolchains/: BUILD.bazel
frontend/: package.json  webpack.config.ts
frontend/src/: Gearing.tsx  InGroupMenu.tsx  Landing.tsx  Main.tsx  Menu.tsx  index.tsx  tsconfig.json
frontend/static/: index.html
